# recall

./: .gitignore  PROJECT_REPORT.md  README.md  TERMS.md  components.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  report-style.css
.github/workflows/: publish-tauri.yml
.trunk/: trunk.yaml
src-tauri/: Cargo.toml  build.rs  recall.db  tauri.conf.json
src-tauri/sql/: areas.sql  events.sql  projects.sql  resources.sql  sessions.sql  user.sql  users.sql
src-tauri/src/: areas.rs  auth.rs  events.rs  lib.rs  main.rs  projects.rs  resources.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/account/: page.tsx
src/app/dashboard/archive/: page.tsx
src/app/dashboard/areas/: page.tsx
src/app/dashboard/calendar/: page.tsx
src/app/dashboard/events/: page.tsx
src/app/lib/: data.ts  data.tsx
src/components/: AppSideBar.tsx  Navbar.tsx  app-navbar.tsx  nav-item.tsx
src/components/area/: AddNewCard.tsx  AreaCard.tsx  AreaDetailView.tsx  NewAreaDialog.tsx
src/components/auth/: AuthForm.tsx
src/components/dashboard/: AppChart.tsx  Chart.tsx  RecentUpcoming.tsx  Stat.tsx  StatCard.tsx  Today'sSchedule.tsx  TodaysOverview.tsx  TodaysOverviewList.tsx
src/components/events/: NewEventDialog.tsx
src/components/home/: HeroSection.tsx
src/components/layout/: AppNavbar.tsx  AppSidebar.tsx  PageHeader.tsx
src/components/projects/: AppDialog.tsx  DatePicker.tsx  EditProjectDropdown.tsx  NewProjectDialog.tsx  Project.tsx
src/components/resources/: NewResourceDialog.tsx  ResourceCard.tsx
src/components/ui/: avatar.tsx  button.tsx  card.tsx  dropdown-menu.tsx  native-select.tsx  nav-item.tsx  nav-user.tsx  sidebar.tsx  smooth-link.tsx  theme-toggle.tsx  tooltip.tsx
(+7 files in other folders)
