[package]
name = "recall"
version = "0.1.0"
description = "a personal knowledge base"
authors = ["us"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
exemplar = "0.37.0"
r2d2 = "0.8.10"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2_sqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = "1.0.100"
rand = "0.9.2"
bcrypt = "0.17"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rfd = "0.15"
